--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myst-demo",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A demo web-component for MyST markdown",
   "main": "dist/src/myst-demo.js",
   "unpkg": "dist/myst-demo.min.js",
@@ -14,6 +14,9 @@
     "url": "https://github.com/executablebooks/myst-demo/issues"
   },
   "homepage": "https://github.com/executablebooks/myst-demo",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "yarn run clean; webpack --config webpack.prod.js",
     "build:dev": "yarn run clean; webpack --config webpack.dev.js",
