🆙 Updates for mystjs

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:dev": "yarn run clean; webpack --config webpack.dev.js",
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts'",
-    "start": "webpack serve --liveReload --open --config webpack.dev.js",
+    "start": "webpack serve --live-reload --open --config webpack.dev.js",
     "prepublishOnly": "yarn run build;"
   },
   "keywords": [
@@ -36,38 +36,43 @@
   "author": "Rowan Cockett",
   "license": "MIT",
   "dependencies": {
-    "highlight.js": "^10.7.2",
-    "lit": "^2.0.0-rc.1",
-    "markdown-it-myst": "^0.0.9"
+    "highlight.js": "^11.4.0",
+    "js-yaml": "^4.1.0",
+    "lit": "^2.1.3"
+  },
+  "peerDependencies": {
+    "mystjs": "^0.0.0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "@esm-bundle/chai": "^4.1.5",
-    "@open-wc/testing": "^2.5.32",
+    "mystjs": "^0.0.0",
+    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "@esm-bundle/chai": "^4.3.3",
+    "@open-wc/testing": "^3.0.4",
     "@open-wc/testing-karma": "^4.0.9",
-    "@types/markdown-it": "^12.0.1",
-    "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "@webcomponents/webcomponentsjs": "^2.5.0",
-    "copy-webpack-plugin": "^9.0.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/markdown-it": "^12.2.3",
+    "@types/mocha": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "@webcomponents/webcomponentsjs": "^2.6.0",
+    "copy-webpack-plugin": "^10.2.4",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.3",
-    "express": "^4.17.1",
-    "html-webpack-plugin": "^5.3.1",
-    "lit-analyzer": "^1.1.10",
-    "mocha": "^7.1.1",
-    "prettier": "^2.0.4",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "express": "^4.17.2",
+    "html-webpack-plugin": "^5.5.0",
+    "lit-analyzer": "^1.2.1",
+    "mocha": "^9.2.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-loader": "^9.2.2",
-    "typescript": "^3.8.3",
-    "web-component-analyzer": "^1.0.3",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "web-component-analyzer": "^1.1.6",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   }
 }
