--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "Rowan Cockett",
   "license": "MIT",
   "dependencies": {
+    "he": "^1.2.0",
     "highlight.js": "^11.4.0",
     "js-yaml": "^4.1.0",
     "lit": "^2.1.3"
@@ -49,6 +50,7 @@
     "@esm-bundle/chai": "^4.3.3",
     "@open-wc/testing": "^3.0.4",
     "@open-wc/testing-karma": "^4.0.9",
+    "@types/he": "^1.1.2",
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/mocha": "^9.1.0",
