--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,21 +1,21 @@
 name: docs
-
-# Only run this when the main branch changes
 on:
   push:
     branches:
-    - main
-
-# This job installs dependencies, build the book, and pushes it to `gh-pages`
+      - main
 jobs:
   deploy-demo:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    # Push the book's HTML to github-pages
-    - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.5.9
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./demo
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - run: yarn install
+      - run: yarn build
+      - name: GitHub Pages action
+        uses: peaceiris/actions-gh-pages@v3.5.9
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
