--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "html-webpack-plugin": "^5.5.0",
     "lit-analyzer": "^1.2.1",
     "mocha": "^9.2.0",
-    "mystjs": "0.0.1",
+    "mystjs": "^0.0.9",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.2.6",
